made simple design changes to color scheme, and all pages are properly linked

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
   }
   
   .main-buttons button {
-    background-color: #6f60b0;
+    background-color: #5A55AA;
     color: white;
     border: none;
     padding: 10px 20px;
