--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ p {
 }
 
 .main-buttons button {
-  background-color: #5A55AA;
+  background-color: #9000B3;
   color: white;
   border: none;
   padding: 10px 20px;
