--- a/about_style.css
+++ b/about_style.css
@@ -36,3 +36,16 @@
     border: #F3E9DC 4px dotted;
     border-radius: 15px;
 }
+
+.footer {
+    display: flex;
+    background: #C8B8DB;
+    color: #502F4C;
+    text-align: center;
+    padding: 1rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 15px;                                           
+}
