--- a/main_style.css
+++ b/main_style.css
@@ -6,20 +6,36 @@ body {
 }
 
 body {
-    background: linear-gradient(to bottom left, #70587C, #502F4C);
+    /* background: linear-gradient(to bottom left, #70587C, #502F4C); */
+
+    min-height: 100vh;
+    background-image: url("images/background_imgs/sandro-katalina-purple_triangle-unsplash.webp");
+    background-size: cover;
+    background-attachment: fixed;
+    /* parallax effect */
+    /* keeps aspect ratio */
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+
     display: flex;
     flex-direction: column;
+    /* horizontal */
+    align-items: center;
     background-repeat: no-repeat;
-    /* ✅ stop tiling */
+    /* stop tiling */
     background-attachment: fixed;
-    /* ✅ fix the background */
+    /* fix the background */
 
 }
+
 
 
 .background {
     display: flex;
     flex-direction: column;
+
+
 
 }
 
@@ -31,6 +47,32 @@ body {
     width: 100%;
     margin: auto;
 }
+
+.extended-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    margin: auto;
+    padding: 20px;
+
+    margin-top: 150px; /* space from header for parallax style -- adjust as needed */
+
+    min-height: 100vh;
+    background: linear-gradient(to bottom left, #280B42E6, #331087E6, #B623FFE6);
+    position: relative;
+    z-index: 1;
+
+    clip-path: polygon(
+        0 80px,      /* left top */
+        100% 0,      /* right top */
+        100% 100%,   /* bottom right */
+        0 100%       /* bottom left */
+    );
+}
+
 
 .header {
     margin: 0 auto;
@@ -128,26 +170,23 @@ body {
 }
 
 .footer {
-    background: #502F4C;
-    color: #F3E9DC;
+    background: #131515;
+    color: #FDF2FF;
     text-align: center;
     padding: 1rem;
+    width: 100%;
 }
 
 
 .main-content {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 20px;
-    margin-top: 75px;
-    background-color: #C8B8DB;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
-    font-family: "Volkhov", serif;
-    color: #000000;
-    max-width: 1200px;
-    min-width: 50%;
-    border: #F3E9DC 2px solid;
-    margin-bottom: 75px;
+    margin: 20px;
+
+
 }
 
 .main-content h3 {
@@ -170,3 +209,140 @@ body {
 
 
 }
+
+.welcome-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 600px;
+    height: 450px;
+
+    margin-top: 150px;  /* space from top of vh for parallax style -- adjust as needed // MOBILE!! */
+
+    background-color: #131515;
+    background: linear-gradient(to bottom left, #280B42, #131515, #331087);
+    animation: gradientShift 20s ease infinite;
+    background-size: 600% 600%;
+    border-radius: 10px;
+    border: #FDF2FF 6px dotted;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+
+    color: #FDF2FF;
+    font-family: "Poiret One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 28px;
+    padding: 20px 40px;
+    gap: 20px;
+
+}
+
+@keyframes gradientShift {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.welcome-block h1 {
+    margin: 10px;
+    padding: 10px;
+
+    text-align: center;
+
+}
+
+.welcome-block h2 {
+
+    border-top: #FDF2FF 2px solid;
+    margin: 0;
+    font-size: 35px;
+    padding-top: 10px;
+    text-align: center;
+
+
+}
+
+.links {
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: "Volkhov", serif;
+    padding-top: 20px;
+    gap: 30px;
+
+}
+
+.links a {
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+    /* reserve space */
+    position: relative;
+    color: #FDF2FF;
+    font-size: 28px;
+    padding: 10px 15px;
+    padding-bottom: 0;
+    cursor: pointer;
+    /* Smooth animation */
+    transition:
+        transform 0.25s ease,
+        background-color 0.25s ease;
+}
+
+.links a:hover {
+    transform: scale(1.2);
+    /* "Blow up" effect */
+    color: #A245FF;
+    /* Change button color */
+}
+
+.links a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    /* space below text */
+    width: 100%;
+    height: 2px;
+    background-color: #A245FF;
+
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+}
+
+.links a:hover::after {
+    transform: scaleX(1);
+}
+
+.extended-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    color: #FDF2FF;
+    font-family: "Volkhov", serif;
+    text-align: center;
+    font-size: x-large;
+
+    background: #131515;
+    border-radius: 10px;
+    border: #FDF2FF 6px dotted;
+
+    max-width: 800px;
+    padding: 40px;
+
+    
+}
+
