--- a/contact_style.css
+++ b/contact_style.css
@@ -1,101 +1,47 @@
-body {
-    background: linear-gradient(to bottom left, #70587C, #502F4C);
-    display: flex;
-    flex-direction: column;
-    background-repeat: no-repeat;
-    /* ✅ stop tiling */
-    background-attachment: fixed;
-    /* ✅ fix the background */
-
-}
-
-.contact-intro {
-    font-family: "Volkhov", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-    margin-bottom: 20px;
-    padding: 10px;
-    text-align: center;
+.links {
+    margin-top: 30px;
 }
 
 .contact-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-top: #FDF2FF 2px solid;
+    margin-top: 15px;
+    padding: 20px;
+    padding-top: 30px;
+    gap: 20px;
+
+    font-size: 38px;
     list-style-type: none;
-    padding-left: 50px;
-    padding-right: 50px;
-    margin: 0;
+
 }
 
-.contact-list li {
-    margin: 10px 0;
-    font-family: "Volkhov", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
-    border-bottom: 2px dashed #F3E9DC;
-    padding-bottom: 5px;
-}
-
-.contact-list li a {
-    color: #502F4C;
+.contact-list a {
     text-decoration: none;
-    padding: 0;
-    margin: 0;
-    border-bottom: 1px solid #502F4C;
-    /* Smooth animation */
+    color: #FDF2FF;
+
     transition:
         transform 0.25s ease,
-        border-color 0.25s ease,
         color 0.25s ease;
+
 }
 
-.contact-list li a:hover {
-    color: #502F4C;
-    text-decoration: none;
-    padding: 0;
-    margin: 0;
-    border-bottom: 1px solid #502F4C;
-    cursor: pointer;
-
-    transform: scale(1.2);
-    /* "Blow up" effect */
-    color: #8A00C4;
-    /* Change button color */
-    border-color: #8A00C4;
+.contact-list a:hover {
+    transform: scale(1.1);
+    color: #B623FF;
+    padding: 10px 15px;
+    border-radius: 5px;
 }
 
-.main-content {
-    margin: 20px;
-    padding: 20px;
-    margin-top: 75px;
-    background-color: #C8B8DB;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
-    font-family: "Volkhov", serif;
-    color: #000000;
-    max-width: 1200px;
-    min-width: 50%;
-    border: #F3E9DC 2px solid;
-    margin-bottom: 75px;
+.contact-list a::after {
+    
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
 }
 
-.main-content h3 {
-    color: #000;
-    font-family: "Poiret One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 25px;
-    text-align: center;
-}
-
-.main-content p {
-    font-family: "Volkhov", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-    margin-bottom: 20px;
-    padding: 10px;
-    line-height: 1.5;
-
-
+.contact-list a:hover::after {
+    transform: scaleX(1);
 }
