--- a/main_style.css
+++ b/main_style.css
@@ -306,3 +306,33 @@ body {
 
 
 }
+
+@media (max-width: 900px) {
+
+    .welcome-block {
+        width: 200px;
+        height: 200px;
+        padding: 150px;
+        font-size: 25px;
+    }
+
+    .welcome-block h2 {
+        font-size: 25px;
+    }
+
+
+
+    .extended-container {
+        width: 90%;
+        max-width: 400px;
+        padding: 20px;
+        font-size: 20px;
+    }
+
+    .extended-container .float-img {
+        width: 100%;
+        height: auto;
+        margin-top: 20px;
+        float: middle;
+    }
+}
