--- a/contact_style.css
+++ b/contact_style.css
@@ -45,3 +45,16 @@
 .contact-list a:hover::after {
     transform: scaleX(1);
 }
+
+@media (max-width: 900px) {
+    .links {
+        flex-direction: column;
+        font-size: 0px;
+        gap: 15px;
+    }
+    .contact-list {
+        gap: 15px;
+        font-size: 20px;
+        text-align: center;
+    }
+}
