--- a/main_style.css
+++ b/main_style.css
@@ -174,7 +174,8 @@ body {
     width: 600px;
     height: 450px;
 
-    margin-top: 150px; /* space from top of vh for parallax style -- adjust as needed // MOBILE!! */
+    margin-top: 150px;
+    /* space from top of vh for parallax style -- adjust as needed // MOBILE!! */
 
     background-color: #131515;
     background: linear-gradient(to bottom left, #280B42, #131515, #331087);
@@ -310,14 +311,22 @@ body {
 @media (max-width: 900px) {
 
     .welcome-block {
-        width: 200px;
-        height: 200px;
-        padding: 150px;
+        width: 300px;
+        height: 500px;
+        padding: 20px;
         font-size: 25px;
     }
 
     .welcome-block h2 {
         font-size: 25px;
+    }
+
+    .links {
+
+        flex-direction: column;
+        font-size: 0px;
+        gap: 15px;
+
     }
 
 
