--- a/main_style.css
+++ b/main_style.css
@@ -329,13 +329,11 @@ body {
 
     }
 
-
-
     .extended-container {
-        width: 90%;
-        max-width: 400px;
+        max-width: 350px;
         padding: 20px;
         font-size: 20px;
+        margin-right: 30px;
     }
 
     .extended-container .float-img {
